--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -161,7 +161,7 @@
                 </div>
                 <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
-                  <input type="password" [(ngModel)]="selectedUSer.contrasena" class="form-control" placeholder="Ingrese una contraseña">
+                  <input type="text" [(ngModel)]="selectedUSer.contrasena" class="form-control" placeholder="Ingrese una contraseña">
                 </div>
                 <div class="form-check form-switch">
                   <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
