--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-main-header></app-main-header>
 
-
 <!-- <app-content-wrapper></app-content-wrapper> -->
 
 <!-- <app-control-sidebar></app-control-sidebar>  -->
@@ -104,13 +103,25 @@
               <li class="nav-item">
                 <a href="/crear-solicitud" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>soli</p>
+                  <p>Crear Solicitud</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="/modificar-solicitud" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>soli2</p>
+                  <p>Modificar solicitud</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/crear-cotizacion" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Crear cotizacion</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/modificar-cotizacion" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Modificar cotizacion</p>
                 </a>
               </li>
             </ul>
