--- a/src/app/configuracion/configuracion.component.html
+++ b/src/app/configuracion/configuracion.component.html
@@ -57,7 +57,7 @@
                                <td>{{ rol.estado }}</td>
                                <td>{{ rol.fechaRegistro }}</td>
                                
-                              <td><button class="btn btn-warning m-2" data-toggle="modal" data-target="#exampleModal" (click)="cargarUsu(rol)"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarUsu()"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
+                              <td><button class="btn btn-warning m-2" data-toggle="modal" data-target="#exampleModal" (click)="cargarRol(rol)"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarRol()"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
                          
                             </tbody>
                            
@@ -104,7 +104,7 @@
           <div class="col-md-6">
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Nombre rol</label>
-              <input type="text" [(ngModel)]="selectedUSer.nombreRol"  class="form-control" placeholder="Ingrese el nombre del rol">
+              <input type="text" [(ngModel)]="selectedRol.nombreRol"  class="form-control" placeholder="Nombre rol">
             </div>
           
             <div class="form-check form-switch">
@@ -120,8 +120,8 @@
                 <label class="form-check-label" for="flexSwitchCheckDefault">Materiales</label>
             </div>
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Servicios</label>
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+                <label class="form-check-label" for="flexSwitchCheckDefault" checked>Servicios</label>
             </div>
 
             <div class="form-check form-switch">
@@ -148,7 +148,7 @@
             </div>
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Solicitudes</label>
+                <label class="form-check-label" for="flexSwitchCheckDefault" checked>Solicitudes</label>
             </div>
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
@@ -156,7 +156,7 @@
             </div>
 
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
                 <label class="form-check-label" for="flexSwitchCheckDefault">Obras</label>
             </div>
 
@@ -172,14 +172,10 @@
         <button type="button" class="btn btn-primary">Modificar</button>
       </div>
     </div>
-
-
-
-
-
-
   </div>
 </div>
+
+
 
 
 
@@ -188,7 +184,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Registrar usuario</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Registrar rol</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -198,23 +194,65 @@
         <div class="container">
              <!-- Info boxes -->
              <div class="row p-2">
-              <div class="col-md-12">
+              <div class="col-md-6">
                 <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label">Nombre rol</label>
-                  <input type="text" [(ngModel)]="selectedUSer.nombreRol"  class="form-control" placeholder="Ingrese un nombre de rol">
+                  <input type="text" [(ngModel)]="selectedRol.nombreRol"  class="form-control" placeholder="Nombre rol">
                 </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
-                  <input type="password" [(ngModel)]="selectedUSer.estado" class="form-control" placeholder="Ingrese una contraseña">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
-                    <input type="password" [(ngModel)]="selectedUSer.fechaRegistro" class="form-control" placeholder="Ingrese una contraseña">
-                  </div>
+              
                 <div class="form-check form-switch">
                   <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                  <label class="form-check-label" for="flexSwitchCheckDefault">Marque el estado</label>
+                  <label class="form-check-label" for="flexSwitchCheckDefault">Configuración</label>
                 </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Usuarios</label>
+                </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Materiales</label>
+                </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Servicios</label>
+                </div>
+    
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Empleados</label>
+                </div>
+    
+              </div>
+    
+    
+    
+              <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Seleccione el estado</label>
+                    <select class="custom-select">
+                        <option value="1">Activo</option>
+                        <option value="2">Inactivo</option>
+                      </select>
+                  </div>
+             
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Clientes</label>
+                </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Solicitudes</label>
+                </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Cotizaciones</label>
+                </div>
+    
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Obras</label>
+                </div>
+    
               </div>
             </div>
 
@@ -225,7 +263,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="agregarUsuario()" data-dismiss="modal">Guardar</button>
+        <button type="button" class="btn btn-primary" (click)="agregarRol()" data-dismiss="modal">Guardar</button>
       </div>
     </div>
 
