--- a/src/app/crear-solicitud/crear-solicitud.component.html
+++ b/src/app/crear-solicitud/crear-solicitud.component.html
@@ -46,7 +46,8 @@
                             </div>
 
                             <div class="col-auto">
-                            <button class="btn btn-success float-right">Agregar solicitud</button>
+                            <button class="btn btn-secondary mx-2 float-right" routerLink="/solicitudes">Volver</button>
+                            <button class="btn btn-success float-right" (click)="agregarSolicitud()">Agregar solicitud</button>
                               </div>
 
                         </div>
@@ -97,12 +98,12 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr *ngFor="let solicitud of solicitudesArray">
+                            <tr *ngFor="let solicitud of solicitudes">
                               <td>{{ solicitud.servicio }}</td>
                                <td>{{ solicitud.cantidad }}</td>
                                <td>{{ solicitud.descripcion }}</td>
                                
-                              <td><button class="btn btn-warning m-2" (click)="cargarCliente(solicitud)" data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarCliente()"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
+                              <td><button class="btn btn-warning m-2" (click)="cargarSolicitud(solicitud)" data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarSolicitud(solicitud)"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
                          
                             </tbody>
                            
@@ -168,7 +169,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         
-        <button type="button" class="btn btn-primary" (click)="editarCliente()" data-dismiss="modal">Modificar</button>
+        <button type="button" class="btn btn-primary" (click)="modificarSolicitud()" data-dismiss="modal">Modificar</button>
       </div>
     </div>
 
