--- a/src/app/materiales/materiales.component.html
+++ b/src/app/materiales/materiales.component.html
@@ -51,13 +51,13 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr *ngFor="let material of materialesArray">
+                            <tr *ngFor="let material of materiales">
                                <td>{{ material.categoria }}</td>
                                <td>{{ material.infoMaterial }}</td>
                                <td>{{ material.estado }}</td>
                                <td>{{ material.fecha }}</td>
                                
-                               <td><button class="btn btn-warning m-2" data-toggle="modal" data-target="#exampleModal" (click)="cargarMaterial(material.id)"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarMaterial()"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
+                               <td><button class="btn btn-warning m-2" data-toggle="modal" data-target="#exampleModal" (click)="cargarMaterial(material)" ><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarMaterial(material)"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
                          
                          
                             </tbody>
@@ -101,40 +101,54 @@
         <div class="container">
              <!-- Info boxes -->
              <div class="row p-2">
-              <div class="col-md-12">
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Categoría</label>
-                  <input type="text" [(ngModel)]="selectedMaterial.categoria"  class="form-control" placeholder="Ingrese su nombre">
+        
+              <div class="col-lg-12">
+                        <form class="mt-3" [formGroup]="materialesForm" (ngSubmit)="agregarMaterial()">
+                            <div class="mb-3">
+                                <input type="text" formControlName="categoria" [(ngModel)]="selectedMaterial.categoria" class="form-control form-control-lg"
+                                    placeholder="Producto">
+                                <div class="text-danger"
+                                    *ngIf="materialesForm.get('categoria')?.hasError('required') && materialesForm.get('categoria')?.touched">
+                                    <span>El nombre del producto <strong>es obligatorio</strong></span>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <input type="text" formControlName="infoMaterial" [(ngModel)]="selectedMaterial.infoMaterial" class="form-control form-control-lg"
+                                    placeholder="Categoria">
+                                <div class="text-danger"
+                                    *ngIf="materialesForm.get('infoMaterial')?.hasError('required') && materialesForm.get('infoMaterial')?.touched">
+                                    <span>La categoria <strong>es obligatoria</strong></span>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Estado</label>
+                            </div>
+                          </div>
+                            <div class="mb-3" class="modal-footer">
+                                <!-- <button routerLink="/" class="btn btn-secondary btn-lg float-start">VOLVER</button> -->
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
+                            <button type="submit" [disabled]="materialesForm.invalid" class="btn btn-success">Registar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Información Material</label>
-                  <input type="text" [(ngModel)]="selectedMaterial.infoMaterial" class="form-control" placeholder="Ingrese su apellido">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Estado</label>
-                  <input type="text" [(ngModel)]="selectedMaterial.estado" class="form-control" placeholder="Ingrese su documento">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Fecha</label>
-                  <input type="number" [(ngModel)]="selectedMaterial.fecha" class="form-control" placeholder="Ingrese su telefóno">
-                </div>
-              </div>
+
             </div>
+
+
+            </div>
+
 
 
         </div>
 
     
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="agregarMaterial()" data-dismiss="modal">Guardar</button>
-      </div>
+    
+      
     </div>
-
-  </div>
-</div>
-
 
 
 
@@ -155,43 +169,52 @@
         <div class="container">
              <!-- Info boxes -->
         <div class="row p-4">
-          <div class="col-md-6">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Categoría</label>
-              <input type="text" [(ngModel)]="selectedMaterial.categoria"  class="form-control" placeholder="Ingrese la categoría">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Información Material</label>
-              <input type="text" [(ngModel)]="selectedMaterial.infoMaterial" class="form-control" placeholder="Info..">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Estado</label>
-              <input type="text" [(ngModel)]="selectedMaterial.estado" class="form-control" placeholder="Ingrese el estado">
-            </div>}
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Fecha</label>
-                <input type="text" [(ngModel)]="selectedMaterial.fecha" class="form-control" placeholder="Ingrese la fecha">
-              </div>
-          </div>
+         
+
+          <div class="col-lg-12">
+            <form class="mt-3" [formGroup]="materialesEditForm" (ngSubmit)="modificarMaterial()">
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Categoría</label>
+                    <input type="text" formControlName="categoria" [(ngModel)]="editMaterial.categoria" class="form-control form-control-lg"
+                        placeholder="Categoria">
+                    <div class="text-danger"
+                        *ngIf="materialesEditForm.get('categoria')?.hasError('required') && materialesEditForm.get('categoria')?.touched">
+                        <span>El este campo<strong>es obligatorio</strong></span>
+                    </div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Información del material</label>
+                    <input type="text" formControlName="infoMaterial" [(ngModel)]="editMaterial.infoMaterial" class="form-control form-control-lg"
+                        placeholder="Informacion del material">
+                    <div class="text-danger"
+                        *ngIf="materialesEditForm.get('infoMaterial')?.hasError('required') && materialesEditForm.get('infoMaterial')?.touched">
+                        <span>Este campo <strong>es obligatoria</strong></span>
+                    </div>
+                </div>
+                <div class="mb-3">
+                  <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Estado</label>
+                </div>
+                </div>
+                <div class="mb-3" class="modal-footer">
+                    <!-- <button routerLink="/" class="btn btn-secondary btn-lg float-start">VOLVER</button> -->
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
+                <button type="submit" [disabled]="materialesEditForm.invalid" class="btn btn-success">Guardar</button>
+                </div>
+            </form>
+        </div>
+
         </div>
         </div>
 
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        
-        <button type="button" class="btn btn-primary">Modificar</button>
+    </div>
       </div>
     </div>
 
 
-
-
-
-
   </div>
-</div>
+<!-- </div> -->
 
 
 
@@ -200,5 +223,5 @@
 
   
 
-  </div>
+  <!-- </div> -->
 
