--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,208 +1,243 @@
 <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
+<div class="content-wrapper">
+  <!-- Content Header (Page header) -->
+  <div class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+     
+      </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+  </div>
+  <!-- /.content-header -->
+
+
+
+  <section class="content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="mb-5 mx-2 blockquote">Usuarios</h2>
+          <div class="card">
+            <div class="card-header">
+              <nav class="navbar bg-light mx-3">
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                  </form>
        
-        </div><!-- /.row -->
-      </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
-
- 
-
-    <section class="content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="mb-5 mx-2 blockquote">Usuarios</h2>
-            <div class="card">
-              <div class="card-header">
-                <nav class="navbar bg-light mx-3">
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
-         
-                    <button class="btn btn-success float-right mt-1" data-toggle="modal" data-target="#crearUsu"><i class="fa-solid fa-plus"></i></button>
-                </nav>
-              </div>
-              <!-- /.card-header -->
-              <div class="card-body">
-                <section class="ftco-section">
-                  <div class="container">
-                    <div class="row justify-content-center">
-              
-                    </div>
-                    <div class="row">
-                      <div class="col-md-12">
-                        <div class="table-wrap">
+                  <button class="btn btn-success float-right mt-1" data-toggle="modal" data-target="#crearUsu"><i class="fa-solid fa-plus"></i></button>
+              </nav>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body">
+              <section class="ftco-section">
+                <div class="container">
+                  <div class="row justify-content-center">
+            
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="table-wrap">
 
 
-                          <table id="example2" class="table table-bordered table-hover">
-                            <thead class="table-dark">
-                            <tr>
-                              <th>Id</th>
-                              <th>Nombre</th>
-                              <th>Apellido</th>
-                              <th>Documento</th>
-                              <th>Teléfono</th>
-                              <th>Dirección</th>
-                              <th>Estado</th>
-                              <th>Fecha</th>
-                              <th>Acciones</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr *ngFor="let usuario of usuariosArray">
-                               <td>{{ usuario.id }}</td>
-                               <td>{{ usuario.nombre }}</td>
-                               <td>{{ usuario.apellido }}</td>
-                               <td>{{ usuario.documento }}</td>
-                               <td>{{ usuario.telefono }}</td>
-                               <td>{{ usuario.direccion }}</td>
-                               <td>{{ usuario.estado }}</td>
-                               <td>{{ usuario.fecha }}</td>
-                               
-                              <td><button class="btn btn-warning m-2" data-toggle="modal" data-target="#exampleModal" (click)="cargarUsu(usuario.id)"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarUsu()"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
+                        <table id="example2" class="table table-bordered table-hover">
+                          <thead class="table-dark">
+                          <tr>
+                            <th>Id Usuario</th>
+                            <th>Nombre rol</th>
+                            <th>Contraseña</th>
+                            <th>Estado</th>
+                            <th>Fecha de registro</th>
+                            <th>Acciones</th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr *ngFor="let usuario of usuarios">
+                             <td>{{ usuario.idUsuario }}</td>
+                             <td>{{ usuario.nombreRol }}</td>
+                             <td>{{ usuario.contrasena }}</td>
+                             <td>{{ usuario.estado }}</td>
+                             <td>{{ usuario.fechaRegistro }}</td>
+                             
+                            <td><button class="btn btn-warning m-2" data-toggle="modal" data-target="#exampleModal" (click)="cargarUsu(usuario)"><i class="fa-solid fa-pen-to-square"></i></button> <button class="btn btn-danger" (click)="eliminarUsu(usuario)"><i class="fa-sharp fa-solid fa-trash-can"></i></button></td>
+                       
+                          </tbody>
                          
-                            </tbody>
-                           
-                          </table>
-                        
-                        </div>
+                        </table>
+                      
                       </div>
                     </div>
                   </div>
-                </section>
-              
-              </div>
-              <!-- /.card-body -->
+                </div>
+              </section>
+            
             </div>
-        
-            <!-- /.card -->
+            <!-- /.card-body -->
           </div>
-          <!-- /.col -->
+      
+          <!-- /.card -->
         </div>
-        <!-- /.row -->
+        <!-- /.col -->
       </div>
-      <!-- /.container-fluid -->
+      <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
 
-    </section>
+  </section>
 
 
 
 
 <!-- modificarUsu -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">Modificar Usuario</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
 
-        <div class="container">
-             <!-- Info boxes -->
-        <div class="row p-4">
-          <div class="col-md-6">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-              <input type="text" [(ngModel)]="selectedUSer.nombre"  class="form-control" placeholder="Ingrese su nombre">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-              <input type="text" [(ngModel)]="selectedUSer.apellido" class="form-control" placeholder="Ingrese su apellido">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Documento</label>
-              <input type="text" [(ngModel)]="selectedUSer.documento" class="form-control" placeholder="Ingrese su documento">
-            </div>
+      <div class="container">
+           <!-- Info boxes -->
+        <form class="mt-3" [formGroup]="usuariosEditForm" (ngSubmit)="modificarUsuario()">
+      <div class="row p-2">
+
+        <div class="col-md-12">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Nombre rol</label>
+            <input type="text" formControlName="nombreRol" [(ngModel)]="editUsuario.nombreRol"  class="form-control" placeholder="Ingrese el nombre del rol">
+         
+            <div
+            class="text-danger"
+            *ngIf="
+              usuariosEditForm
+                .get('nombreRol')
+                ?.hasError('required') &&
+              usuariosEditForm.get('nombreRol')?.touched
+            "
+          >
+            <span>El nombre del rol<strong>es obligatorio</strong></span>
+          </div>
+
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
+            <input type="text" formControlName="contasena" [(ngModel)]="editUsuario.contrasena" class="form-control" placeholder="Ingrese una contraseña">
+         
+         
+            <div
+            class="text-danger"
+            *ngIf="
+              usuariosEditForm
+                .get('contrasena')
+                ?.hasError('required') &&
+              usuariosEditForm.get('contrasena')?.touched
+            "
+          >
+            <span>La contraseña <strong>es obligatorio</strong></span>
+          </div>
+
+          </div>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+            <label class="form-check-label" for="flexSwitchCheckDefault">Marque el estado</label>
           </div>
         </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          
+          <button type="submit" class="btn btn-primary">Modificar</button>
         </div>
 
 
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        
-        <button type="button" class="btn btn-primary">Modificar</button>
+
+    </form>
+
+      
       </div>
+
+
     </div>
-
-
-
-
-
-
   </div>
+
+
+
+
+
+
+</div>
 </div>
 
 
 
 <!-- crearUsu -->
 <div class="modal fade" id="crearUsu" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Registrar usuario</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">Registrar usuario</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
 
-        <div class="container">
-             <!-- Info boxes -->
-             <div class="row p-2">
-              <div class="col-md-12">
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                  <input type="text" [(ngModel)]="selectedUSer.nombre"  class="form-control" placeholder="Ingrese su nombre">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-                  <input type="text" [(ngModel)]="selectedUSer.apellido" class="form-control" placeholder="Ingrese su apellido">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Documento</label>
-                  <input type="text" [(ngModel)]="selectedUSer.documento" class="form-control" placeholder="Ingrese su documento">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Teléfono</label>
-                  <input type="number" [(ngModel)]="selectedUSer.telefono" class="form-control" placeholder="Ingrese su telefóno">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Dirección</label>
-                  <input type="text" [(ngModel)]="selectedUSer.direccion" class="form-control" placeholder="Ingrese su dirección">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Fecha</label>
-                  <input type="date" [(ngModel)]="selectedUSer.fecha" class="form-control" placeholder="Ingrese su fecha">
-                </div>
+      <div class="container">
+           <!-- Info boxes -->
+        <form class="mt-3" [formGroup]="usuariosForm" (ngSubmit)="agregarUsuario()">
+           <div class="row p-2">
+            <div class="col-md-12">
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Nombre rol</label>
+                <input type="text" formControlName="nombreRol" [(ngModel)]="selectedUsuario.nombreRol"  class="form-control" placeholder="Ingrese un nombre de rol">
+  
+                <div class="text-danger"
+                *ngIf="usuariosForm.get('nombreRol')?.hasError('required') && usuariosForm.get('nombreRol')?.touched">
+                <span>El nombre del rol <strong>es obligatorio</strong></span>
+            </div>
+             
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
+                <input type="text" formControlName="contrasena" [(ngModel)]="selectedUsuario.contrasena" class="form-control" placeholder="Ingrese una contraseña">
+              
+                <div class="text-danger"
+                *ngIf="usuariosForm.get('contrasena')?.hasError('required') && usuariosForm.get('contrasena')?.touched">
+                <span>La contraseña <strong>es obligatorio</strong></span>
+            </div>
+              
+              </div>
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Marque el estado</label>
               </div>
             </div>
 
 
-        </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+              <button type="submit" class="btn btn-primary">Guardar</button>
+            </div>
 
-    
+          </div>
+        </form>
+
+
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="agregarUsuario()" data-dismiss="modal">Guardar</button>
-      </div>
+
+  
     </div>
-
   </div>
+
+</div>
 </div>
 
 
-  
 
-  </div>
+
+</div>
